Closed Bug 184588 Opened 22 years ago Closed 22 years ago

[gtk native themes] border is incorrectly applied to <toolbox>

Categories

(SeaMonkey :: Themes, defect)

x86
Linux
defect
Not set
normal

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: bryner, Assigned: bryner)

Details

Attachments

(1 file)

My checkin for bug 174927 accidentely caused us to start applying a border to toolbox elements. This causes the menu bar and all the toolbars to be inset from the edge of the window. Unfortunately, gtk doesn't have a concept of a 'toolbox' that's different from a toolbar (in mozilla-speak, the toolbox is the thing that encloses the 3 toolbars at the top of the browser window). I think the gtkdrawing.c implementation of the toolBAR border is correct, aside from using a handlebox instead of a gtktoolbar. I'd propose that we fix nsNativeThemeGTK.cpp to know that toolBOX does not correspond to any gtk widget for purposes of a border, and hardcode it to a 0 pixel border.
Attached patch patchSplinter Review
Attachment #108847 - Flags: superreview?(ben)
Attachment #108847 - Flags: review?(blizzard)
Comment on attachment 108847 [details] [diff] [review] patch r=blizzard
Attachment #108847 - Flags: review?(blizzard) → review+
checked in.
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
verified code fix
Status: RESOLVED → VERIFIED
QA Contact: pmac → gbush
Product: Core → SeaMonkey
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: