Don't apply a border to <toolbox> (bug 184588). r=blizzard, sr=ben.